# x11-man

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: capture.rs  keyboard.rs
exemples/: display.rs  keyboard.rs  mouse.rs  window.rs
lib/: mod.rs  x.rs  xlib.rs
lib/ffi/: mod.rs  types.rs  x.rs  xlib.rs
src/: main.rs
src/lib/: events.rs  mod.rs  x.rs  xlib.rs
src/lib/ffi/: constants.rs  functions.rs  mod.rs  structs.rs  types.rs
