[package]
name = "x11_man"
version = "0.0.2"
edition = "2021"
authors = ["konkitoman"]

[lib]
name = "x11_man"
path = "lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "keyboard"
path = "./exemples/keyboard.rs"

[[example]]
name = "mouse"
path = "./exemples/mouse.rs"

[[example]]
name = "window"
path = "./exemples/window.rs"

[[example]]
name = "display"
path = "./exemples/display.rs"